test: GitHub-API-Tests bei Rate-Limit überspringen statt Timeout
NewReleaseCheckerTest: @BeforeEach prüft Rate-Limit über /rate_limit-
Endpunkt (HTTP + Body-Check auf "remaining":0) und bricht per
Assumptions.abort() ab – verhindert 3-Minuten-Hang durch kohsuke-github-
Retries. Assumptions.assumeTrue nach null-Rückgaben als zweite Absicherung.
new URL(String) → URI.create(...).toURL() (deprecated seit Java 20).

GlobalImplUITest: Fehler-Assertions (504, #NAME?) für
testPTMTurniersystemFormula immer ausführen. throws GenerateException
aus zwei Methoden entfernt die es nie werfen.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>